--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     .photo-frame {
       background-color: white;
       margin: 25px 20px;
-      height: 200px;
+      
 
       background-size: cover;
       position: relative;
@@ -184,7 +184,7 @@
         </span>
       </div>
       <div class="photo-frame">
-        <iframe src="Teaser.mp4" frameborder="0" id="image4"></iframe>
+        <iframe src="TTeaser.mp4" frameborder="0" id="image4"></iframe>
 
       </div>
     </div>
